# serializer version: 1
# name: test_activities_data
  list([
    Activity(id=1, name='Providing'),
    Activity(id=2, name='Consuming'),
  ])
# ---
# name: test_classifications_data
  list([
    Classification(id=1, name='Forecast'),
    Classification(id=2, name='Current'),
    Classification(id=3, name='Backcast'),
  ])
# ---
# name: test_granularities_data
  list([
    Granularity(id=3, name='10Min'),
    Granularity(id=4, name='15Min'),
    Granularity(id=5, name='Hour'),
    Granularity(id=6, name='Day'),
    Granularity(id=7, name='Month'),
    Granularity(id=8, name='Year'),
  ])
# ---
# name: test_granularity_timezones_data
  list([
    GranularityTimezone(id=0, name='UTC'),
    GranularityTimezone(id=1, name='Europe/Amsterdam'),
  ])
# ---
# name: test_points_data
  list([
    Point(id=0, name='Nederland', shortname='NL'),
    Point(id=1, name='Groningen', shortname='Gr'),
    Point(id=2, name='Friesland', shortname='Fr'),
    Point(id=3, name='Drenthe', shortname='Dr'),
    Point(id=4, name='Overijssel', shortname='Ov'),
    Point(id=5, name='Flevoland', shortname='FL'),
    Point(id=6, name='Gelderland', shortname='Ge'),
    Point(id=7, name='Utrecht', shortname='Ut'),
    Point(id=8, name='Noord-Holland', shortname='No'),
    Point(id=9, name='Zuid-Holland', shortname='Zu'),
    Point(id=10, name='Zeeland', shortname='Ze'),
    Point(id=11, name='Noord-Brabant', shortname='Nb'),
    Point(id=12, name='Limburg', shortname='Li'),
    Point(id=13, name='Eilanden', shortname='Ei'),
    Point(id=28, name='Windpark Luchterduinen', shortname='WPlu'),
    Point(id=29, name='Windpark Princes Amalia', shortname='WPam'),
    Point(id=30, name='Windpark Egmond aan Zee', shortname='WPoz'),
    Point(id=31, name='Windpark Gemini', shortname='WPGe'),
    Point(id=32, name='Windpark Borselle', shortname='WPbo'),
    Point(id=33, name='Windpark Borselle I&II', shortname='WPb1'),
    Point(id=34, name='Windpark Borselle III&IV', shortname='Wpb3'),
    Point(id=35, name='Windpark Hollandse Kust Zuid', shortname='WPkz'),
    Point(id=36, name='Windpark Hollandse Kust Noord', shortname='WPkn'),
  ])
# ---
# name: test_types_data
  list([
    Type(id=1, name='Wind', shortname='W'),
    Type(id=2, name='Solar', shortname='S'),
    Type(id=3, name='Biogas', shortname='B'),
    Type(id=4, name='HeatPump', shortname='HP'),
    Type(id=5, name='AirHeatPump', shortname='AHP'),
    Type(id=6, name='HybridHeatPump', shortname='HHP'),
    Type(id=7, name='GroundHeatPump', shortname='GHP'),
    Type(id=8, name='Cofiring', shortname='COF'),
    Type(id=9, name='Geothermal', shortname='GEO'),
    Type(id=10, name='Other', shortname='OTHR'),
    Type(id=11, name='Waste', shortname='WST'),
    Type(id=12, name='BioOil', shortname='BOIL'),
    Type(id=13, name='Biomass', shortname='BMSS'),
    Type(id=14, name='Wood', shortname='WOOD'),
    Type(id=15, name='WoodActiveHeating', shortname='WOAH'),
    Type(id=16, name='WoodComfortHeating', shortname='WOCH'),
    Type(id=17, name='WindOffshore', shortname='WIOS'),
    Type(id=18, name='FossilGasPower', shortname='FGP'),
    Type(id=19, name='FossilHardCoal', shortname='FHC'),
    Type(id=20, name='Nuclear', shortname='NCL'),
    Type(id=21, name='WastePower', shortname='WP'),
    Type(id=22, name='WindOffshoreB', shortname='WOSB'),
    Type(id=23, name='NaturalGas', shortname='NG'),
    Type(id=24, name='Biomethane', shortname='BM'),
    Type(id=25, name='BiomassPower', shortname='BMP'),
    Type(id=26, name='OtherPower', shortname='OP'),
    Type(id=27, name='ElectricityMix', shortname='EM'),
    Type(id=28, name='GasMix', shortname='GM'),
    Type(id=29, name='GasPrivateDistributionCompanies', shortname='GPDC'),
    Type(id=30, name='GasFinalConsumers', shortname='GFC'),
    Type(id=31, name='GasDistribution', shortname='GD'),
    Type(id=32, name='CHPElectricity', shortname='CHPE'),
    Type(id=33, name='WindB', shortname='WB'),
    Type(id=34, name='SolarB', shortname='SB'),
    Type(id=35, name='WKK Total', shortname='WKKT'),
    Type(id=36, name='WKK Distribution', shortname='WKKD'),
    Type(id=37, name='WKK Final Consumers', shortname='WKKF'),
    Type(id=38, name='Gas Feedstock', shortname='GFS'),
    Type(id=43, name='IndustrialConsumersLGas', shortname='ICLG'),
    Type(id=45, name='LocalDistributionCompaniesHGas', shortname='LDCH'),
    Type(id=46, name='LocalDistributionCompaniesLGas', shortname='LDCL'),
    Type(id=47, name='IndustrialConsumersPowerHGas', shortname='ICPH'),
    Type(id=48, name='IndustrialConsumersPowerLGas', shortname='ICPL'),
    Type(id=49, name='IndustrialConsumersHGas', shortname='ICH'),
    Type(id=50, name='SolarThermal', shortname='ST'),
    Type(id=51, name='WindOffshoreC', shortname='WOSC'),
    Type(id=53, name='IndustrialConsumersGasCombination', shortname='ICGC'),
    Type(id=54, name='IndustrialConsumersPowerGasCombination', shortname='ICPG'),
    Type(id=55, name='LocalDistributionCompaniesCombination', shortname='LDCC'),
    Type(id=56, name='AllConsumingGas', shortname='AEGC'),
    Type(id=57, name='ElectricityRenewable', shortname='ER'),
    Type(id=58, name='ElectricityFossile', shortname='EF'),
  ])
# ---
# name: test_utilizations_data
  list([
    Utilization(id=64428400808, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 28, 23, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 28, 23, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64428563886, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 28, 23, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 28, 23, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64428714054, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 28, 23, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 28, 23, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64428877389, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 28, 23, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 28, 23, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429040827, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 28, 23, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 0, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429188210, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 0, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 0, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429338832, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 0, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 0, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429489557, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 0, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 0, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429627602, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 0, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 0, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429778584, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 0, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 0, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64429929669, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 0, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 1, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430067929, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 1, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 1, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430106526, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 1, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 1, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430246749, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 1, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 1, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430385319, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 1, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 1, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430424266, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 1, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 1, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579816, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 1, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 2, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579817, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 2, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 2, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579818, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 2, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 2, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579819, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 2, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 2, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579820, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 2, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 2, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579821, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 2, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 2, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430579822, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 2, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 3, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430719174, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 3, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 3, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64430871449, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 3, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 3, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431023827, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 3, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 3, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431163495, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 3, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 3, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431316130, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 3, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 3, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431468868, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 3, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 4, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431608751, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 4, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 4, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431761561, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 4, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 4, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64431914474, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 4, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 4, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432054667, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 4, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 4, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432207837, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 4, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 4, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432361110, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 4, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 5, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432501518, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 5, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 5, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432654863, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 5, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 5, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432808311, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 5, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 5, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64432949029, capacity=9332, volume=1555, percentage=0.0004408143868204206, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 5, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 5, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64433102734, capacity=28313, volume=4720, percentage=0.0013374132104218006, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 5, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 5, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64433256542, capacity=70145, volume=11692, percentage=0.0033134096302092075, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 5, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 6, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64433397475, capacity=145884, volume=24314, percentage=0.006891041528433561, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 6, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 6, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64433551355, capacity=265049, volume=44174, percentage=0.012519937008619308, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 6, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 6, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64433813437, capacity=398153, volume=66359, percentage=0.018807223066687584, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 6, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 6, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64434063412, capacity=559350, volume=93225, percentage=0.026421472430229187, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 6, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 6, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64434469530, capacity=779242, volume=129874, percentage=0.03680819272994995, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 6, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 6, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64434805105, capacity=1026089, volume=171014, percentage=0.04846808686852455, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 6, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 7, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64435263506, capacity=1304015, volume=217336, percentage=0.06159595027565956, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 7, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 7, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64435784994, capacity=1650513, volume=275087, percentage=0.07796277850866318, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 7, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 7, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64435883326, capacity=2008770, volume=334793, percentage=0.09488493949174881, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 7, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 7, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436025094, capacity=2410111, volume=401687, percentage=0.11384208500385284, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 7, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 7, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436179869, capacity=2927435, volume=487905, percentage=0.1382775753736496, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 7, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 7, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436334747, capacity=3406672, volume=567780, percentage=0.16091391444206238, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 7, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 8, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436476730, capacity=3896816, volume=649470, percentage=0.1840652972459793, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 8, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 8, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436631680, capacity=4358443, volume=726407, percentage=0.20586952567100525, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 8, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 8, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436786733, capacity=4757737, volume=792957, percentage=0.22472938895225525, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 8, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 8, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64436929026, capacity=5102703, volume=850450, percentage=0.2410230189561844, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 8, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 8, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437084336, capacity=5439082, volume=906511, percentage=0.25691089034080505, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 8, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 8, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437239749, capacity=5942869, volume=990477, percentage=0.2807060778141022, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 8, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 9, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437382257, capacity=6473562, volume=1078927, percentage=0.30577200651168823, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 9, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 9, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437537742, capacity=6954866, volume=1159143, percentage=0.3285049498081207, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 9, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 9, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437693330, capacity=7275365, volume=1212560, percentage=0.34364229440689087, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 9, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 9, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437836148, capacity=7409742, volume=1234957, percentage=0.3499884307384491, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 9, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 9, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64437991993, capacity=7683680, volume=1280615, percentage=0.3629263937473297, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 9, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 9, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64438147941, capacity=8262892, volume=1377149, percentage=0.3902834951877594, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 9, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 10, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64438290974, capacity=8731683, volume=1455281, percentage=0.41242483258247375, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 10, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 10, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64438446994, capacity=9150420, volume=1525070, percentage=0.43220189213752747, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 10, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 10, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64438603117, capacity=9416753, volume=1569460, percentage=0.44478023052215576, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 10, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 10, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64438746460, capacity=9793632, volume=1632272, percentage=0.4625798761844635, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 10, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 10, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64438902840, capacity=10261311, volume=1710218, percentage=0.48466822504997253, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 10, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 10, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439059323, capacity=10774580, volume=1795763, percentage=0.5089097619056702, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 10, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 11, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439202881, capacity=11010591, volume=1835099, percentage=0.5200555920600891, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 11, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 11, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439359436, capacity=11195649, volume=1865942, percentage=0.5287948846817017, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 11, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 11, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439516094, capacity=11437056, volume=1906176, percentage=0.5401954650878906, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 11, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 11, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439659962, capacity=11583963, volume=1930659, percentage=0.5471326112747192, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 11, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 11, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439816877, capacity=11652356, volume=1942058, percentage=0.5503612756729126, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 11, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 11, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64439973895, capacity=11629416, volume=1938235, percentage=0.5492761135101318, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 11, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 12, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64440117978, capacity=11357233, volume=1892872, percentage=0.5364189147949219, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 12, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 12, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64440275068, capacity=10889726, volume=1814952, percentage=0.5143364667892456, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 12, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 12, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64440432261, capacity=10558076, volume=1759681, percentage=0.4986707270145416, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 12, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 12, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64440576654, capacity=10424271, volume=1737378, percentage=0.4923495650291443, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 12, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 12, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64440734104, capacity=10327375, volume=1721230, percentage=0.48777157068252563, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 12, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 12, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64440891657, capacity=10330023, volume=1721671, percentage=0.4878951907157898, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 12, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 13, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441036265, capacity=10064547, volume=1677425, percentage=0.4753551483154297, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 13, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 13, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441193890, capacity=10382734, volume=1730455, percentage=0.4903819262981415, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 13, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 13, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441351618, capacity=10633564, volume=1772263, percentage=0.5022273063659668, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 13, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 13, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441496536, capacity=10747051, volume=1791176, percentage=0.507585883140564, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 13, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 13, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441654521, capacity=10558889, volume=1759815, percentage=0.4986974596977234, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 13, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 13, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441812609, capacity=10140372, volume=1690064, percentage=0.47892946004867554, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 13, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 14, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64441957742, capacity=9501513, volume=1583586, percentage=0.4487548768520355, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 14, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 14, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64442115902, capacity=8937388, volume=1489565, percentage=0.42211008071899414, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 14, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 14, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64442274165, capacity=8432436, volume=1405406, percentage=0.3982602059841156, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 14, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 14, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64442419608, capacity=7992521, volume=1332085, percentage=0.3774821162223816, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 14, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 14, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64442578128, capacity=7548111, volume=1258018, percentage=0.3564918339252472, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 14, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 14, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64442736751, capacity=7139869, volume=1189979, percentage=0.33720991015434265, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 14, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 15, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64442882409, capacity=6747545, volume=1124591, percentage=0.3186798393726349, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 15, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 15, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443041104, capacity=6326353, volume=1054390, percentage=0.2987865209579468, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 15, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 15, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443199902, capacity=6089829, volume=1014973, percentage=0.28761494159698486, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 15, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 15, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443345870, capacity=5887524, volume=981253, percentage=0.2780594825744629, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 15, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 15, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443504925, capacity=5660023, volume=943337, percentage=0.2673141658306122, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 15, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 15, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443664083, capacity=5247024, volume=874504, percentage=0.2478080838918686, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 15, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 16, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443810266, capacity=4682774, volume=780463, percentage=0.22115889191627502, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 16, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 16, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64443969496, capacity=4078678, volume=679778, percentage=0.1926279515028, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 16, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 16, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64444128829, capacity=3476833, volume=579472, percentage=0.16420355439186096, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 16, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 16, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64444275322, capacity=2929094, volume=488182, percentage=0.13833457231521606, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 16, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 16, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64444434912, capacity=2488739, volume=414791, percentage=0.1175372451543808, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 16, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 16, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64444594605, capacity=2139899, volume=356651, percentage=0.10106205940246582, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 16, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 17, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64444741313, capacity=1810478, volume=301748, percentage=0.08550407737493515, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 17, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 17, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64444901078, capacity=1447018, volume=241170, percentage=0.06833863258361816, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 17, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 17, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445060946, capacity=1102686, volume=183780, percentage=0.052076634019613266, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 17, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 17, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445207964, capacity=775164, volume=129194, percentage=0.03660862520337105, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 17, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 17, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445368089, capacity=446036, volume=74340, percentage=0.02106485329568386, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 17, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 17, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445528317, capacity=209246, volume=34873, percentage=0.009881990030407906, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 17, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 18, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445675550, capacity=54574, volume=9096, percentage=0.0025773404631763697, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 18, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 18, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445835850, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 18, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 18, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64445996253, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 18, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 18, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64446143796, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 18, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 18, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64446304456, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 18, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 18, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64446465219, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 18, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 19, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64446612977, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 19, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 19, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64446773812, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 19, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 19, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64446934750, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 19, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 19, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64447082818, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 19, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 19, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64447244013, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 19, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 19, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64447405311, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 19, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 20, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64447553594, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 20, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 20, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64447714964, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 20, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 20, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64447876437, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 20, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 20, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448025030, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 20, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 20, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448186760, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 20, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 20, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448348593, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 20, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 21, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448497401, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 21, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 21, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448659306, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 21, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 21, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448821314, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 21, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 21, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64448970432, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 21, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 21, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64449132697, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 21, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 21, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64449295065, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 21, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 22, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64449444398, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 22, 0, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 22, 10, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64449606838, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 22, 10, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 22, 20, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64449769381, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 22, 20, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 22, 30, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64449919024, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 22, 30, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 22, 40, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64450081824, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 22, 40, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 22, 50, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
    Utilization(id=64450244727, capacity=0, volume=0, percentage=0.0, emission=0, emission_factor=0.0, valid_from=datetime.datetime(2024, 3, 29, 22, 50, tzinfo=datetime.timezone.utc), valid_to=datetime.datetime(2024, 3, 29, 23, 0, tzinfo=datetime.timezone.utc), last_update=datetime.datetime(2024, 4, 2, 6, 37, 53, tzinfo=datetime.timezone.utc)),
  ])
# ---
